# python-pocket-cli

./: README.md  pocket_cli.py  pyproject.toml
pocketlib/: __init__.py
