[tool.poetry]
name = "python-pocket-cli"
version = "0.1.0"
description = ""
authors = ["kumarstack55 <kumarstack55@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
coverage = "^5.1"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
